4 setting pages added and can navigate too. Need to populate them with content.

--- a/src/pages/settings/shooters/shooters.html
+++ b/src/pages/settings/shooters/shooters.html
@@ -6,7 +6,7 @@
 				<ion-icon name="ios-arrow-back"></ion-icon>
 			</button>
 		</ion-buttons>
-		<ion-title>Settings</ion-title>
+		<ion-title>Shooters</ion-title>
 	</ion-navbar>
 
 </ion-header>
@@ -42,3 +42,5 @@
 	</ion-list>
  
 </ion-content>
+
+<setting-footer [active]="shooters"></setting-footer>
