Added general setting.

--- a/src/pages/settings/forms/sight-mark/sight-mark.html
+++ b/src/pages/settings/forms/sight-mark/sight-mark.html
@@ -55,7 +55,7 @@
 
 			<ion-item>
 				<ion-label fixed>Notes</ion-label>
-				<ion-input type="text" [(ngModel)]="sightMark.note" placeholder="Remember to ..." [ngModelOptions]="{standalone: true}"></ion-input>
+				<ion-textarea rows="5" type="text" [(ngModel)]="sightMark.note" placeholder="Remember to ..." [ngModelOptions]="{standalone: true}"></ion-textarea>
 			</ion-item>
 			
 		</form>
