--- a/src/pages/settings/menu/general/general.html
+++ b/src/pages/settings/menu/general/general.html
@@ -13,6 +13,13 @@
 
 <ion-content no-bounce>
  
-	
+	<ion-list no-lines>
+
+		<ion-item>
+			<ion-label fixed>Show saved popups</ion-label>
+    		<ion-toggle [(ngModel)]="setting.showToastOnSave"></ion-toggle>
+		</ion-item>
+
+	</ion-list>
  
 </ion-content>
