Setup and settings seem fine.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,13 +17,13 @@
  
 		<ion-row justify-content-center align-items-center class="score">
 			<ion-col>
-				<button ion-button class="menu" (click)="gotoScore()">Score Sheet</button>
+				<button ion-button class="menu" (click)="GotoScore()">New Score Card</button>
 			</ion-col>
 		</ion-row>
 
 		<ion-row justify-content-center align-items-center class="history">
 			<ion-col>
-				<button ion-button class="menu" (click)="gotoHistory()">History</button>
+				<button ion-button class="menu" (click)="GotoHistory()">History</button>
 			</ion-col>
 		</ion-row>
 
