--- a/src/pages/settings/menu/rounds/rounds.html
+++ b/src/pages/settings/menu/rounds/rounds.html
@@ -1,12 +1,13 @@
 <ion-header>
 
 	<ion-navbar color="archers-heading" hideBackButton>
-		<ion-buttons left>
+		<ion-buttons left *ngIf="!isModal">
 			<button ion-button icon-only (click)="Back()">
 				<ion-icon name="ios-arrow-back"></ion-icon>
 			</button>
 		</ion-buttons>
-		<ion-title>Rounds</ion-title>
+		<ion-title *ngIf="!isModal">Rounds</ion-title>
+		<ion-title *ngIf="isModal">Select a Round</ion-title>
 	</ion-navbar>
 
 	<ion-toolbar>
@@ -24,7 +25,7 @@
 
 			<ion-item-divider color="archers-light-blue">
 				Rounds <ion-badge color="archers-heading">{{ rounds | roundTypeCount:selectedType}}</ion-badge>
-				<button ion-button item-right clear color="dark" (click)="CreateRound()">Add</button>
+				<button ion-button item-right clear color="dark" (click)="CreateRound()" *ngIf="!isModal">Add</button>
 			</ion-item-divider>
 	
 			<ion-item *ngIf="rounds?.length==1">
@@ -38,15 +39,25 @@
 						<strong *ngIf="selectedType!='Custom'">{{ organisation | properCase }} </strong><strong>{{ season | properCase }}</strong>
 					</ion-item-divider>
 			
-					<ion-item-sliding #slidingItem *ngFor="let round of ( rounds | round:selectedType:organisation:season )" reorder="true" (ionItemReorder)="reorderItems($event)">
-						<button ion-item (click)="UpdateRound(round)" (press)="info(round)" color="{{round?.targets.length == 0?'archers-light-danger':''}}">        
+					<div *ngIf="isModal">
+						<ion-item *ngFor="let round of ( rounds | round:selectedType:organisation:season )" reorder="true" (ionItemReorder)="reorderItems($event)">
+							<button ion-item (click)="SelectRound(round)" (press)="info(round)" color="{{round?.targets.length == 0?'archers-light-danger':''}}">        
 								{{ round.name }}
-						</button>
-						<ion-item-options side="right">
+							</button>
+						</ion-item>
+					</div>
+
+					<div *ngIf="!isModal">
+						<ion-item-sliding #slidingItem *ngFor="let round of ( rounds | round:selectedType:organisation:season )" reorder="true" (ionItemReorder)="reorderItems($event)">
+							<button ion-item (click)="UpdateRound(round)" (press)="info(round)" color="{{round?.targets.length == 0?'archers-light-danger':''}}">        
+								{{ round.name }}
+							</button>
+							<ion-item-options side="right">
 								<button ion-button color="danger" (click)="DeleteRound(slidingItem, round)"><ion-icon name="trash"></ion-icon>Delete</button>
-						</ion-item-options> 
-					</ion-item-sliding>
-			
+							</ion-item-options> 
+						</ion-item-sliding>
+					</div>
+
 				</ion-item-group>
 			</ion-item-group>
 			
