--- a/src/pages/settings/menu/general/general.html
+++ b/src/pages/settings/menu/general/general.html
@@ -16,8 +16,13 @@
 	<ion-list no-lines>
 
 		<ion-item>
-			<ion-label fixed>Show saved popups</ion-label>
+			<ion-label fixed>Show save popups</ion-label>
     		<ion-toggle [(ngModel)]="setting.showToastOnSave"></ion-toggle>
+		</ion-item>
+
+		<ion-item>
+			<ion-label fixed>Show save score popups</ion-label>
+    		<ion-toggle [(ngModel)]="setting.showToastOnScoreInput"></ion-toggle>
 		</ion-item>
 
 	</ion-list>
